--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -20,6 +20,15 @@
         grid-template-columns: repeat(auto-fit, minmax(300px, auto));
         gap: 2rem;
     }
+    .skills {
+        padding: 8% 5% 5% 5%;
+    }
+    .projects {
+        padding-top: 5%;
+    }
+    .contactUs {
+        padding-top: 8%;
+    }
 }
 
 
@@ -46,6 +55,7 @@
         justify-content: center;
         align-items: center;
     }
+    
     .contactUs {
         min-height: auto;
     }
@@ -114,7 +124,10 @@
         padding-bottom: 5%;
     }
     .skills {
-        padding: 8% 5% 5% 5%;
+        padding: 16% 5% 5% 5%;
+    }
+    .projects { 
+        padding-top: 8%;
     }
     .skills .row{
         flex-direction: column;
@@ -124,6 +137,9 @@
     }
     .row .col:nth-child(2) {
         margin-top: 30px;
+    }
+    .contactUs {
+        padding-top: 16%;
     }
         
 }
